objects/Academic_Support_Project__c.object
<CustomObject><fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to related an academic support project to an account</description>
        <inlineHelpText>used to related an academic support project to an account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Academic_Support_Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Application_Category__c</fullName>
        <description>Used to categorize an application, replaced line items used in siebel</description>
        <inlineHelpText>Used to categorize an application</inlineHelpText>
        <label>Application Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Applications</fullName>
                </value>
                <value>
                    <fullName>Communications Systems</fullName>
                </value>
                <value>
                    <fullName>Computational Biology</fullName>
                </value>
                <value>
                    <fullName>Computational Finance</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Digital Signal Processing</fullName>
                </value>
                <value>
                    <fullName>Embedded Systems</fullName>
                </value>
                <value>
                    <fullName>FPGA Design</fullName>
                </value>
                <value>
                    <fullName>Image Processing &amp; Comp Vision</fullName>
                </value>
                <value>
                    <fullName>Mechatronics</fullName>
                </value>
                <value>
                    <fullName>Technical Computing</fullName>
                </value>
                <value>
                    <fullName>Test and Measurement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Class__c</fullName>
        <description>Used to delineate the type of program, values vary by record type</description>
        <inlineHelpText>Used to delineate the type of program, values vary by record type</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Curriculum Development</fullName>
                </value>
                <value>
                    <fullName>Industry Advisory Boards/Progs</fullName>
                </value>
                <value>
                    <fullName>Letter of Support</fullName>
                </value>
                <value>
                    <fullName>MISC</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Student Competitions</fullName>
                </value>
                <value>
                    <fullName>Student Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Days_between_Start_and_End_Date__c</fullName>
        <description>COmpares teh start date to the end date</description>
        <formula>ROUND( End__c - Start__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Start and End Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Days_between_Start_and_now__c</fullName>
        <description>Calculates the days between the Start Date and NOW</description>
        <formula>ROUND((DATEVALUE(Now()) -  Start__c  ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between Start and now</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <description>Used to capture a description of the course, grant or competition</description>
        <inlineHelpText>Used to capture a description of the course, grant or competition</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>E2AEmailCount__c</fullName>
        <description>This field show the count of e2a email which has status as new</description>
        <label>E2AEmailCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>EndTime_in_Review_by_Lega__c</fullName>
        <description>day / time when the staus is moved from Review by Legal</description>
        <label>End Time in Review by Legal</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>End_Time_in_Customer_Signature__c</fullName>
        <description>day / time when the staus is moved from Customer Signature</description>
        <label>End Time in Customer Signature</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>End_Time_in_Review_by_VP_of_Marketing__c</fullName>
        <description>day / time when the staus is moved from Review by VP of Marketing</description>
        <label>End Time in Review by VP of Marketing</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>End_Time_in_Review_by_other_Mathworkers__c</fullName>
        <description>day / time when the staus is moved from Review by Other MW'ers</description>
        <label>End Time in Review by Other Mathworkers</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>End__c</fullName>
        <description>Date the agreement for the course, curriculum or competition has ended.</description>
        <inlineHelpText>Date the agreement for the course, curriculum or competition has ended.</inlineHelpText>
        <label>End</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Extended_End__c</fullName>
        <description>Date the multi-year award will end based on requestor start date.  May be updated after a final approval date.</description>
        <inlineHelpText>Date the multi-year award will end based on requestor start date.  May be updated after a final approval date.</inlineHelpText>
        <label>Extended End</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Final_Approval__c</fullName>
        <description>Denotes the date that the request was approved</description>
        <inlineHelpText>Denotes the date that the request was approved</inlineHelpText>
        <label>Final Approval</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the Academic Support Project needs follow up action</description>
        <inlineHelpText>Used to indicate if the Academic Support Project needs follow up action</inlineHelpText>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Has_TAH_License__c</fullName>
        <defaultValue>false</defaultValue>
        <description>capture if an AS Project has a TAH license or not</description>
        <label>Has TAH License</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Industry__c</fullName>
        <description>Used to categorize the industry the application fits into.  Replaced line items used in siebel</description>
        <inlineHelpText>Used to categorize the industry the application fits into</inlineHelpText>
        <label>Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Industries</fullName>
                </value>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotech &amp; Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Chemical and Petroleum</fullName>
                </value>
                <value>
                    <fullName>Communication Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Communication Devices</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Earth and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Industrial Automation and Mach</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Metals, Materials and Mining</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Rail Ships &amp; other Transport</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Software and Internet</fullName>
                </value>
                <value>
                    <fullName>Technical Svcs &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Utilities and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>License_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be manually set by the user once the License is activated.</description>
        <label>License Activated</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>New_Email_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to denote that a new email has been related to the record, not on page layout and used in list views.</description>
        <label>New Email Message</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to create parent / child relationships between academic support records.</description>
        <inlineHelpText>Used to create parent / child relationships between academic support records.  Use this look up to make this record a child of another.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Academic_Support_Project__c</referenceTo>
        <relationshipName>Academic_Support</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Academic_Support_Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Receive_Time_of_Last_Email__c</fullName>
        <description>The day / time when the last email was received.</description>
        <label>Receive Time of Last Email</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Record_Number__c</fullName>
        <description>Creates a unique sequential number for records created</description>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Siebel_ID__c</fullName>
        <description>Used for data migration, captures the Siebel ID for migrated records.  Can be used for search in Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>Used for data migration, captures the Siebel ID for migrated records.  Can be used to search records in Salesforce</inlineHelpText>
        <label>Siebel ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Sponsoring_Office__c</fullName>
        <description>Used to identify the sponsoring office where the request originated from.</description>
        <inlineHelpText>Used to identify the sponsoring office where the request originated from.</inlineHelpText>
        <label>Sponsoring Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MathWorks Australia</fullName>
                </value>
                <value>
                    <fullName>MathWorks China</fullName>
                </value>
                <value>
                    <fullName>MathWorks France</fullName>
                </value>
                <value>
                    <fullName>MathWorks Germany</fullName>
                </value>
                <value>
                    <fullName>MathWorks India</fullName>
                </value>
                <value>
                    <fullName>MathWorks Italy</fullName>
                </value>
                <value>
                    <fullName>MathWorks Japan</fullName>
                </value>
                <value>
                    <fullName>MathWorks Korea</fullName>
                </value>
                <value>
                    <fullName>MathWorks Natick</fullName>
                </value>
                <value>
                    <fullName>MathWorks Netherlands</fullName>
                </value>
                <value>
                    <fullName>MathWorks Nordic</fullName>
                </value>
                <value>
                    <fullName>MathWorks Spain</fullName>
                </value>
                <value>
                    <fullName>MathWorks Switzerland</fullName>
                </value>
                <value>
                    <fullName>MathWorks UK</fullName>
                </value>
                <value>
                    <fullName>MathWorks Worldwide</fullName>
                </value>
                <value>
                    <fullName>Natick - AMER</fullName>
                </value>
                <value>
                    <fullName>Natick - APAC</fullName>
                </value>
                <value>
                    <fullName>Natick - EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Start_Time_in_Customer_Signature__c</fullName>
        <description>the day / time when the Status is changed to Customer Signature</description>
        <label>Start Time in Customer Signature</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Start_Time_in_Review_By_Other_Mathworker__c</fullName>
        <description>the day / time when the Status is changed to Review by other MWers</description>
        <label>Start Time in Review By Other Mathworker</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Start_Time_in_Review_by_Legal__c</fullName>
        <description>the day / time when the Status is changed to Review by Legal</description>
        <label>Start Time in Review by Legal</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Start_Time_in_Review_by_VP_of_Marketing__c</fullName>
        <description>the day / time when the Status is changed to Review by VP of Marketing</description>
        <label>Start Time in Review by VP of Marketing</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Start__c</fullName>
        <description>Date that the completed external application and internal proposal (if applicable) from the internal MathWorks sponsor was received.</description>
        <inlineHelpText>Date that the completed external application and internal proposal (if applicable) from the internal MathWorks sponsor was received.</inlineHelpText>
        <label>Start</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Status_Age__c</fullName>
        <formula>ROUND((Now() -  Status_Updated_date__c  ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Status_Updated_date__c</fullName>
        <description>indicated when the status was last updated</description>
        <label>Status Updated Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Used to capture the status for the Academic Support record and drive process</description>
        <inlineHelpText>Used to capture the status for the Academic Support record and drive process</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Sponsor Updating Proposal</fullName>
                </value>
                <value>
                    <fullName>Review by VP of Marketing</fullName>
                </value>
                <value>
                    <fullName>Review by Other MathWorkers</fullName>
                </value>
                <value>
                    <fullName>Review by Legal</fullName>
                </value>
                <value>
                    <fullName>Customer Signature</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>MathWorks Signature</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed - No Response</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sub_Class__c</fullName>
        <description>Dependent on Class, provides more detail to the class</description>
        <inlineHelpText>Dependent on Class, provides more detail to the class</inlineHelpText>
        <label>Sub Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Class__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IAB/IAP</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
                <value>
                    <fullName>External Events Support</fullName>
                </value>
                <value>
                    <fullName>Prize-MATLAB Student Version</fullName>
                </value>
                <value>
                    <fullName>Development-Collaboration Research Grants</fullName>
                </value>
                <value>
                    <fullName>Other Research Grants – Faculty Research Project</fullName>
                </value>
                <value>
                    <fullName>Other Research Grants – Projects for Undergraduates/Graduates</fullName>
                </value>
                <value>
                    <fullName>Corporate Sponsored</fullName>
                </value>
                <value>
                    <fullName>Individual Student Team</fullName>
                </value>
                <value>
                    <fullName>Fellowship</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Teaching Assistant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Support_level__c</fullName>
        <description>Used for Curriculum development only</description>
        <inlineHelpText>Used for curriculum development only.  Select the appropriate value.</inlineHelpText>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>University</fullName>
                </value>
                <value>
                    <fullName>Pre-University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TE_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate a Project to an Academic Support Project</description>
        <inlineHelpText>Relate a TE Project to an Academic Support Project</inlineHelpText>
        <label>TE Project</label>
        <referenceTo>MW_Project__c</referenceTo>
        <relationshipName>Academic_Support_Projects</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Thread_Id__c</fullName>
        <formula>"ref:"&amp;LEFT( $Organization.Id , 4 )&amp;
IF(BEGINS(RIGHT($Organization.Id,11), '0000000'),
RIGHT($Organization.Id,4),
IF(BEGINS(RIGHT($Organization.Id,11), '000000'),
RIGHT($Organization.Id,5),
IF(BEGINS(RIGHT($Organization.Id,11), '00000'),
RIGHT($Organization.Id,6),
IF(BEGINS(RIGHT($Organization.Id,11), '0000'),
RIGHT($Organization.Id,7),
IF(BEGINS(RIGHT($Organization.Id,11), '000'),
RIGHT($Organization.Id,8),
IF(BEGINS(RIGHT($Organization.Id,11), '00'),
RIGHT($Organization.Id,9),
IF(BEGINS(RIGHT($Organization.Id,11), '0'),
RIGHT($Organization.Id,10),
RIGHT($Organization.Id,11)
)
)
)
)
)
)
)
&amp;"."&amp;LEFT( Id , 4 )&amp;
IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), '00'), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), '0'), RIGHT(Id,10),
RIGHT(Id,11)
)
)
)
)
)
)
)
&amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Time_in_Customer_Signature__c</fullName>
        <formula>End_Time_in_Customer_Signature__c -  Start_Time_in_Customer_Signature__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Customer Signature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Time_in_Review_By_Legal__c</fullName>
        <formula>EndTime_in_Review_by_Lega__c -  Start_Time_in_Review_by_Legal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Review By Legal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Time_in_Review_By_Other_Mathworkers__c</fullName>
        <formula>End_Time_in_Review_by_other_Mathworkers__c -  Start_Time_in_Review_By_Other_Mathworker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Review By Other Mathworkers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Time_in_Review_By_VP_of_Marketing__c</fullName>
        <formula>End_Time_in_Review_by_VP_of_Marketing__c -  Start_Time_in_Review_by_VP_of_Marketing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Review By VP of Marketing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Total_Monetary_Investment__c</fullName>
        <description>Summary roll up of investment records of type monetary</description>
        <inlineHelpText>Summary roll up of investment records of type monetary</inlineHelpText>
        <label>Total Monetary Investment</label>
        <summarizedField>Investment__c.Payment_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Investment__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Monetary</value>
        </summaryFilterItems>
        <summaryForeignKey>Investment__c.Academic_Support_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Web_Site__c</fullName>
        <description>Used to capture a URL for a course or competition</description>
        <inlineHelpText>Used to capture a URL for a course or competition</inlineHelpText>
        <label>Web Site</label>
        <type>Url</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used to capture Grant, Curriculum and Student Competition applications

Changed Label from Academic Support Project to EDU Project on 5/4</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>EDU Project</label><nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField><pluralLabel>EDU Projects</pluralLabel><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><visibility>Public</visibility><listViews>
        <fullName>AS_w_new_Email_or_require_followup</fullName>
        <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>E2AEmailCount__c</columns>
        <columns>Follow_Up_Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>E2AEmailCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Follow_Up_Required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Spam,No Action</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Academic_Support</value>
        </filters>
        <label>AS w/new Email or require followup</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>All</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Sub_Class__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>In_Progress_Academic_Support_Projects</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Started,Closed - No Response,Complete,Denied,Spam,No Action</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Academic_Support</value>
        </filters>
        <label>In Progress Academic Support Projects</label>
    </listViews><listViews>
        <fullName>In_Progress_Student_Comp_Projects</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status_Age__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Started,Closed - No Response,Complete,Denied,Spam,No Action</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Student_Competition</value>
        </filters>
        <label>In Progress Student Comp Projects</label>
    </listViews><listViews>
        <fullName>My_Open_Academic_Support_Projects</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Not Started,Closed - No Response,Complete,Denied,Spam,No Action</value>
        </filters>
        <label>My Open Academic Support Projects</label>
    </listViews><listViews>
        <fullName>Natick_Academic_Support_Projects</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sponsoring_Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Natick</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Academic_Support</value>
        </filters>
        <label>Natick Academic Support Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>Natick_Student_Comp_Projects</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sponsoring_Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Natick</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Student_Competition</value>
        </filters>
        <label>Natick Student Comp Projects</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews><listViews>
        <fullName>New_Academic_Support_Projects</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Academic_Support</value>
        </filters>
        <label>New Academic Support Projects</label>
    </listViews><listViews>
        <fullName>New_Student_Comp_Projects</fullName>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>NAME</columns>
        <columns>Sub_Class__c</columns>
        <columns>Status__c</columns>
        <columns>Class__c</columns>
        <columns>Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Academic_Support_Project__c.Student_Competition</value>
        </filters>
        <label>New Student Comp Projects</label>
    </listViews>    </validationRules></CustomObject>